--- a/tracking-rules/javascript/Advisory_SE_Roundtable.yml
+++ b/tracking-rules/javascript/Advisory_SE_Roundtable.yml
@@ -1,31 +1,16 @@
 rules:
   - key: Advisory SE Roundtable
     type: TRACK
+    description: Advisory SE Roundtable
     version: 1
-    jsonSchema:
-      $schema: http://json-schema.org/draft-07/schema#
-      type: object
-      labels:
-        feature: journeys
-      properties:
-        context:
-          type: object
-        traits:
-          type: object
-        properties:
-          type: object
-          properties:
-            prop2:
-              description: this is a single property
-              type: string
-            prop3:
-              description: this is a single property
-              type: string
-          required:
-            - prop2
-            - prop3
-      required:
-        - properties
-    createdAt: '2024-09-18T18:56:17.000Z'
-    updatedAt: '2025-02-11T21:16:37.000Z'
-    deprecatedAt: '0001-01-01T00:00:00.000Z'
+    labels:
+      feature: journeys
+    properties:
+      prop2:
+        description: this is a single property
+        type: string
+        required: true
+      prop3:
+        description: this is a single property
+        type: string
+        required: true
