--- a/tracking-rules/javascript/Advisory_SE_Roundtable.yml
+++ b/tracking-rules/javascript/Advisory_SE_Roundtable.yml
@@ -7,7 +7,7 @@ rules:
       feature: journeys
     properties:
       prop2:
-        description: this is a single property
+        description: this is a single property name
         type: string
         required: true
       prop3:
